fix logo alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1736,7 +1736,7 @@ input::-moz-focus-inner {
 .header-logo {
   z-index: 601;
   display: inline-block;
-  margin: 6px 0 0 0;
+  margin: 0 0 0 0;
   padding: 0;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
